--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "class-variance-authority": "^0.7.1",
