--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.31",
