--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,6 +14,12 @@
 	"observability": {
 		"enabled": true
 	},
+	"routes": [
+		{
+			"pattern": "philipp-litzenberger.de/*",
+			"zone_name": "philipp-litzenberger.de"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
