--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@react-router/serve": "^7.9.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "isbot": "^5.1.32",
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.5",
     "react-router": "^7.9.6",
     "tailwind-merge": "^3.4.0"
   },
